syntax = "proto3";

package antelope.atomicmarket.v1;

import "google/protobuf/any.proto"; // Import Any type

message AnyEvents {
  repeated AnyEvent items = 1;
}

message AnyEvent {
  oneof event {
    AnnounceSale announce_sale = 1;
    AnnounceAuction annonce_auction = 2;
    NewBuyOffer new_buy_offer = 3;
    PurchaseSale purchase_sale = 4;
    NewSale new_sale = 5;
    AssertSale assert_sale = 6;
  }
}

// Assertsale
message AssertSale {
  // trace information
  string trx_id = 1;

  //payload
  uint64 sale_id = 4;
  string seller = 5;
  repeated uint64 asset_ids = 6;
  int64 offer_id = 7;
  string listing_price = 8;
  string settlement_symbol = 9;
  string maker_marketplace = 10;
  string collection_name = 11;
  string collection_fee = 12;
}

message AnnounceSale {
  // trace information
  string trx_id = 1;

  //payload
  string seller = 5;
  repeated uint64 asset_ids = 6;
  string listing_price = 7;
  string settlement_symbol = 8;
  string maker_marketplace = 9;
}

message AnnounceAuction {
  // trace information
  string trx_id = 1;

  //payload
  string seller = 5;
  repeated uint64 asset_ids = 6;
  string starting_bid = 7;
  uint32 duration = 8;
  string maker_marketplace = 9;
}

message NewBuyOffer {
  // trace information
  string trx_id = 1;

  //payload
  uint64 buyoffer_id = 4;
  string buyer = 5;
  string recipient = 6;
  string price = 7;
  repeated uint64 asset_ids = 8;
  string memo = 9;
  string maker_marketplace = 10;
  string collection_name = 11;
  string collection_fee = 12;
}

message NewSale {
  // trace information
  string trx_id = 1;

  //payload
  uint64 sale_id = 4;
  string seller = 5;
  repeated uint64 asset_ids = 6;
  string listing_price = 7;
  string settlement_symbol = 8;
  string maker_marketplace = 9;
  string collection_name = 10;
  string collection_fee = 11;
}

message PurchaseSale {
  // trace information
  string trx_id = 1;

  //payload
  string buyer = 4;
  uint64 sale_id = 5;
  uint64 intended_delphi_median = 6;
  string taker_marketplace = 7;
}